tests/errors/multiple-cleanup.rs
fn main(){

}

#[adtest::adtest(cleanup = cleanup, cleanup = cleanup)]
fn invalid_test(){

}

fn cleanup(){

}